# rules_atlas

./: DESIGN.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extensions.bzl
.github/workflows/: ci.yml
private/: BUILD.bazel  atlas_migrate_diff_run.bzl  atlas_migrate_diff_run.sh.tmpl  atlas_migrate_lint.bzl  atlas_migrate_lint.sh.tmpl  atlas_operator_install.bzl  atlas_schema_test.bzl  atlas_schema_test.sh.tmpl  providers.bzl  repositories.bzl  versions.bzl
private/manifests/: BUILD.bazel  atlas_operator.yaml
tests/: BUILD.bazel  schema_sqlite.hcl  schema_users.hcl
tests/install_smoke/: BUILD.bazel  atlasschema.yaml  cluster.yaml  cnpg_health_wrapper.sh  cnpg_install_wrapper.sh  health_wrapper.sh  install_wrapper.sh  smoke_test.sh
tests/migrate_diff_smoke/: BUILD.bazel  atlas.hcl  schema.hcl  smoke_test.sh
tests/migrate_diff_smoke/migrations/: .gitkeep
tests/migrate_lint_pg_smoke/: BUILD.bazel
tests/migrate_lint_pg_smoke/migrations/: 20260101000000_init.sql
tests/migrations/: 20260101000000_init.sql
toolchain/: BUILD.bazel  toolchain.bzl
tools/: BUILD.bazel  extensions.bzl  render_atlas_operator.sh  repositories.bzl  versions.bzl  writeback.sh
