"""rules_atlas — hermetic Atlas (atlasgo.io) primitives for Bazel.

Two families in one repo:

  CLI primitives (binary-toolchain):
    atlas_schema_test     — `atlas schema fmt --check` over an HCL/SQL schema
    atlas_migrate_lint    — `atlas migrate lint` over a migrations directory

  Install primitives (helm-render + kubectl_apply):
    atlas_operator_install              — applies the pinned Atlas Operator chart
    atlas_operator_install_health_check — readiness probe paired with the install

Atlas community-edition binary (Apache-2.0) is downloaded from
release.ariga.io. The operator chart is rendered at maintainer time
from the upstream source tarball; consumers consume the committed
private/manifests/atlas_operator.yaml.
"""

module(
    name = "rules_atlas",
    version = "0.2.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")

# CLI binary toolchain — fetched per-platform from release.ariga.io.
atlas = use_extension("//:extensions.bzl", "atlas")
atlas.version(version = "1.2.0")
use_repo(atlas,
    "atlas_linux_amd64",
    "atlas_linux_arm64",
    "atlas_darwin_amd64",
    "atlas_darwin_arm64",
)
register_toolchains("@rules_atlas//toolchain:all")

# rules_kubectl is a public dep — atlas_operator_install is a thin macro
# around kubectl_apply, so consumers transitively get the launcher.
bazel_dep(name = "rules_kubectl", version = "0.2.0")
git_override(
    module_name = "rules_kubectl",
    remote = "https://github.com/collider-bazel-extensions/rules_kubectl",
    commit = "81b60ab80df46b64c612f2576ffef0a7af98ccb6",  # v0.2.0
)

# rules_shell — atlas_schema_test + atlas_migrate_lint emit sh_test wrappers.
bazel_dep(name = "rules_shell", version = "0.8.0")

# ---- dev-only: maintainer chart-render flow + smoke composition -------------
# Consumers do NOT inherit any of these.

bazel_dep(name = "rules_helm", version = "0.2.1", dev_dependency = True)
git_override(
    module_name = "rules_helm",
    remote = "https://github.com/collider-bazel-extensions/rules_helm",
    commit = "48651387d55f0c50f6d059df246ed73767100afb",  # v0.2.1
)

helm = use_extension("@rules_helm//:extensions.bzl", "helm", dev_dependency = True)
helm.version(version = "3.20.2")
use_repo(helm,
    "helm_linux_amd64",
    "helm_darwin_amd64",
    "helm_darwin_arm64",
)
register_toolchains(
    "@helm_linux_amd64//:toolchain",
    "@helm_darwin_amd64//:toolchain",
    "@helm_darwin_arm64//:toolchain",
    dev_dependency = True,
)

bazel_dep(name = "rules_itest", version = "0.0.52", dev_dependency = True)

bazel_dep(name = "rules_kind", version = "0.1.2", dev_dependency = True)
git_override(
    module_name = "rules_kind",
    remote = "https://github.com/collider-bazel-extensions/rules_kind",
    commit = "b9c4670646f8e3772816f56a048e311d5310a763",  # v0.1.2
)

# CloudNativePG provides the postgres backing the AtlasSchema smoke. The
# operator reconciles the schema against a live postgres URL — CNPG is
# the family's standard postgres compose (cf. rules_zitadel v0.3,
# rules_cloudnativepg's own TLS smoke).
bazel_dep(name = "rules_cloudnativepg", version = "0.1.0", dev_dependency = True)
git_override(
    module_name = "rules_cloudnativepg",
    remote = "https://github.com/collider-bazel-extensions/rules_cloudnativepg",
    commit = "4fc9af3003da9405a0d8f8fe37560fb41268ccf0",  # v0.1.0
)

# Maintainer-side: download the upstream source tarball at the pinned
# tag so the chart can be rendered. Fires only when rules_atlas is
# the root module (is_root guard in the extension).
atlas_operator_chart = use_extension(
    "//tools:extensions.bzl",
    "atlas_operator_chart",
    dev_dependency = True,
)
atlas_operator_chart.version(version = "0.7.29")
use_repo(atlas_operator_chart, "atlas_operator_src_0_7_29")

# rules_pg is dev-only — used by the in-tree `atlas_migrate_diff_run`
# smoke (provides a hermetic Postgres dev URL). Consumers do NOT
# inherit it; they bring their own dev_service implementation. (Any
# target writing $RULES_PG_OUTPUT_ENV_FILE-sized KEY=VALUE env files
# is compatible — see DESIGN.md.)
bazel_dep(name = "rules_pg", version = "0.2.1", dev_dependency = True)
git_override(
    module_name = "rules_pg",
    remote = "https://github.com/collider-bazel-extensions/rules_pg",
    commit = "bc13d2a52e969fd52e4b15f32a215283309ac7dc",  # v0.2.1
)
