load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":toolchain.bzl", "atlas_toolchain")

package(default_visibility = ["//visibility:public"])

exports_files(["toolchain.bzl"])

toolchain_type(name = "atlas")

# Per-platform toolchains. Each `atlas_<plat>` repo (created by the
# module extension) contains the Atlas binary for one platform; the
# toolchain selects the right repo based on the resolved exec
# platform.

atlas_toolchain(
    name    = "atlas_linux_amd64_impl",
    version = "1.2.0",
    atlas_bin = "@atlas_linux_amd64//:bin",
)

toolchain(
    name                   = "atlas_linux_amd64",
    toolchain_type         = ":atlas",
    exec_compatible_with   = ["@platforms//os:linux", "@platforms//cpu:x86_64"],
    target_compatible_with = ["@platforms//os:linux", "@platforms//cpu:x86_64"],
    toolchain              = ":atlas_linux_amd64_impl",
)

atlas_toolchain(
    name    = "atlas_linux_arm64_impl",
    version = "1.2.0",
    atlas_bin = "@atlas_linux_arm64//:bin",
)

toolchain(
    name                   = "atlas_linux_arm64",
    toolchain_type         = ":atlas",
    exec_compatible_with   = ["@platforms//os:linux", "@platforms//cpu:arm64"],
    target_compatible_with = ["@platforms//os:linux", "@platforms//cpu:arm64"],
    toolchain              = ":atlas_linux_arm64_impl",
)

atlas_toolchain(
    name    = "atlas_darwin_amd64_impl",
    version = "1.2.0",
    atlas_bin = "@atlas_darwin_amd64//:bin",
)

toolchain(
    name                   = "atlas_darwin_amd64",
    toolchain_type         = ":atlas",
    exec_compatible_with   = ["@platforms//os:osx", "@platforms//cpu:x86_64"],
    target_compatible_with = ["@platforms//os:osx", "@platforms//cpu:x86_64"],
    toolchain              = ":atlas_darwin_amd64_impl",
)

atlas_toolchain(
    name    = "atlas_darwin_arm64_impl",
    version = "1.2.0",
    atlas_bin = "@atlas_darwin_arm64//:bin",
)

toolchain(
    name                   = "atlas_darwin_arm64",
    toolchain_type         = ":atlas",
    exec_compatible_with   = ["@platforms//os:osx", "@platforms//cpu:arm64"],
    target_compatible_with = ["@platforms//os:osx", "@platforms//cpu:arm64"],
    toolchain              = ":atlas_darwin_arm64_impl",
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    deps = ["//private:providers"],
)
